tests/errors/test-inheritance-base-ctor-deleted.script

class A 
{ 
  A(A &&) = delete;
};

class B : A 
{ 
  B(B &&) = default; 
};

//>52429:52429: error C71: cannot generate defaulted move constructor because parent move constructor is deleted.
